kuberneties/mongo-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-app
  template:
    metadata:
      labels:
        app: mongo-app
    spec:
      containers:
      - name: mongo-app
        image: mongo:latest

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-app-service
spec:
  selector:
    app: mongo-app
  ports:
    - name: tcp
      port: 27017
      targetPort: 27017
