kuberneties/amazon-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  namespace: default
spec:
  rules:
  - host: myamazon.com
    http:
      paths:
      - backend:
          serviceName: amazon-web-service
          servicePort: 3000
